I've added the react meta tags npm package to the server and source folder inorder to add meta tags inside components, installed Material ui inside source folder for styling purposes, and started on the nav bar for the launch page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/LilOTechGod/E-commerce-appeal-clothing-store#readme",
   "dependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "react-meta-tags": "^1.0.1"
   }
 }
